# RHook

./: .gitignore  .gitmodules  CMakeLists.txt  VS2022 x64.bat  VS2022 x86.bat
dependencies/: CMakeLists.txt
dependencies/Detours/: CMakeLists.txt
dependencies/libffi/: CMakeLists.txt  cmake_fficonfig.h.in  configure_options.cmake
include/RHook/: RenderHook.hpp
include/RHook/hooks/: D3D10Hook.hpp  D3D10MethodInfo.hpp  D3D11Hook.hpp  D3D11MethodInfo.hpp  D3D12Hook.hpp  D3D12MethodInfo.hpp  D3D9Hook.hpp  DXGIHook.hpp  DXGIVMTIndices.hpp  OpenGLHook.hpp  PresentHook.hpp  WindowsMessageHook.hpp
include/RHook/log/: Logging.hpp
include/RHook/utility/: Address.hpp  Detour.hpp  MidFunctionHook.hpp  Module.hpp  OriginalOverride.hpp  PointerHook.hpp  SmartFunctionHook.hpp  String.hpp
src/: CMakeLists.txt  Initialization.cpp  VulkanHook.cpp  VulkanHook.hpp
src/Include/: RenderHook.hpp
src/Log/: Logging.cpp  Logging.hpp
src/hooks/: D3D10Hook.cpp  D3D10Hook.hpp  D3D11Hook.cpp  D3D11Hook.hpp  D3D12Hook.cpp  D3D12Hook.hpp  D3D9Hook.cpp  D3D9Hook.hpp  D3D9VMTIndices.hpp  DXGIHook.cpp  DXGIHook.hpp  OpenGLHook.cpp  OpenGLHook.hpp  PresentHook.cpp  PresentHook.hpp  VulkanHook.cpp  VulkanHook.hpp  WindowsMessageHook.cpp  WindowsMessageHook.hpp
src/utility/: Address.cpp  Address.hpp  Detour.cpp  FunctionHook.cpp  FunctionHook.hpp  MidFunctionHook.cpp  Midhook_x86.asm  Midhook_x86_x64.asm  Module.cpp  Module.hpp  OriginalOverride.cpp  OriginalOverride.hpp  PointerHook.cpp  PointerHook.hpp  ProtectionOverride.cpp  ProtectionOverride.hpp  SmartFunctionHook.cpp  SmartFunctionHook.hpp  String.cpp  Thread.cpp  Thread.hpp  VtableHook.cpp  VtableHook.hpp
